сделал одну секцию

--- a/src/page.html
+++ b/src/page.html
@@ -61,7 +61,22 @@
         </div>
       </div>
     </header>
-    <main class="main"></main>
+
+    <main class="main">
+      <div class="bredcrumbs">
+        <div class="container">
+          <ul class="bredcrumbs__list">
+            <li class="bredcrumbs__items">
+              <a class="bredcrumbs__link" href="#">Home</a>
+            </li>
+            <li class="bredcrumbs__items">
+              <a class="bredcrumbs__link" href="#">About</a>
+            </li> 
+          </ul>
+        </div> 
+      </div>
+    </main>
+
     <footer class="footer">
       <div class="footer__content">
         <div class="container">
