--- a/src/index.html
+++ b/src/index.html
@@ -187,6 +187,143 @@
           </div>
         </div>
       </section>
+      <div class="gallery">
+        <div class="container-fluid">
+          <div class="gallery__buttons">
+            <button class="gallery__btn" data-filter=".bedroom">Bedroom furniture</button>
+            <button class="gallery__btn" data-filter=".living">Living room furniture</button>
+            <button class="gallery__btn" data-filter=".office">Office furniture</button>
+            <button class="gallery__btn" data-filter=".dining">Dining room futniture</button>
+            <button class="gallery__btn" data-filter=".chair">Chair</button>
+          </div>
+          <div class="gallery__inner">
+
+            <div class="gallery__items mix bedroom">
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/1.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/2.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/3.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img"src="img/gallery/4.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/5.jpg" alt="images">
+              </a>
+            </div>
+
+            <div class="gallery__items mix living">
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/1.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/2.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/3.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img"src="img/gallery/4.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/5.jpg" alt="images">
+              </a>
+            </div>
+
+            <div class="gallery__items mix office">
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/1.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/2.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/3.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img"src="img/gallery/4.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/5.jpg" alt="images">
+              </a>
+            </div>
+
+            <div class="gallery__items mix dining">
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/1.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/2.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/3.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img"src="img/gallery/4.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/5.jpg" alt="images">
+              </a>
+            </div>
+
+            <div class="gallery__items mix chair">
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/1.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/2.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/3.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img"src="img/gallery/4.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="">
+                <img class="gallery__img" src="img/gallery/5.jpg" alt="images">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- блог бокс -->
+      <section class="blog-box">
+        <div class="container">
+          <h3 class="blog-box__title">More inspiration ideas in our blog</h3>
+          <div class="blog-box__items">
+            <div class="blog-box__item">
+              <a class="blog-box__img-link" href="">
+                <img class="blog-box__img" src="img/blog/1.jpg" alt="image">
+              </a>
+              <div class="blog-box__links">
+                <span class="blog-box__date">March 12, 2020</span> |
+                <a class="blog-box__author" href="#">by Ann Summers</a> |
+                <a class="blog-box__theme" href="#">Inrerior</a>
+              </div>
+              <a class="blog-box__item-title-link" href="">
+                <h4 class="blog-box__item-title">Red selfies edison bulb four dollar toast humblebrag</h4>
+              </a>
+            </div>
+            <div class="blog-box__item">
+              <a class="blog-box__img-link" href="">
+                <img class="blog-box__img" src="img/blog/2.jpg" alt="image">
+              </a>
+              <div class="blog-box__links">
+                <span class="blog-box__date">September 28,2020</span> |
+                <a class="blog-box__author" href="#">by Finnagan Morningstar</a> | 
+                <a class="blog-box__theme" href="#">Dining room interior</a>
+              </div>
+              <a class="blog-box__item-title-link" href="">
+                <h4 class="blog-box__item-title">Listicle actually selvage activated charcoal for the drinking vinegar </h4>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
 
     </main>
 
