--- a/src/about.html
+++ b/src/about.html
@@ -98,11 +98,106 @@
           </div>
         </div>
         <div class="about__popup">
-          <a class="about__popup-play" href="#">
+          <a class="about__popup-play" data-fancybox href="https://youtu.be/WRTUVPOylwY">
             <img class="about__popup-imgbtn" src="img/play-button.svg" alt="play button">
           </a>
         </div>
       </section>
+      <!-- inspiration -->
+      <section class="inspiration">
+        <div class="container-fluid">
+          <div class="inspiration__inner">
+            <img class="inspiration__img" src="img/inspiration-img.png" alt="img">
+            <div class="inspiration__content">
+              <h3 class="inspiration__title">Our Inspiration in details</h3>
+              <p class="inspiration__text">
+                Semiotics fixie four dollar toast, next level woke scenester direct trade photo booth helvetica jean shorts. Fanny pack church-key cornhole, banh mi thundercats gochujang keytar.
+              </p>
+              <ul class="inspiration__list">
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Design and technical drawings</p>
+                    <p class="inspiration__num">80</p>
+                  </div>
+                  <div class="inspiration__line" style="width: 80%;"></div>
+                </li>
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Measurments</p>
+                    <p class="inspiration__num">70%</p>
+                  </div>
+                  <div class="inspiration__line" style="width: 70%;"></div>
+                </li>
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Furniture functionality analysis</p>
+                    <p class="inspiration__num">75%</p>
+                  </div>
+                  <div class="inspiration__line" style="width: 75%;"></div>
+                </li>
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Interior visualization</p>
+                    <p class="inspiration__num">40%</p>
+                  </div>
+                  <div class="inspiration__line" style="width: 40%;"></div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="partners">
+        <div class="container-fluid">
+          <div class="partners__items">
+            <img class="partners__item" src="img/partners/part1.svg" alt="logo image">
+            <img class="partners__item" src="img/partners/part2.svg" alt="logo image">
+            <img class="partners__item" src="img/partners/part1.svg" alt="logo image">
+            <img class="partners__item" src="img/partners/part2.svg" alt="logo image">
+            <img class="partners__item" src="img/partners/part1.svg" alt="logo image">
+          </div>
+        </div>
+      </div>
+      <div class="collection">
+        <a class="collection__item" href="#">
+          <img class="collection__images" src="img/content/collection-1.jpg" alt="images">
+          <div class="collection__info">
+            <h6 class="collection__info-title">Truffaut literally trust</h6>
+            <p class="collection__info-text">Living room furntiture | Chair</p>
+          </div>
+        </a>
+        <a class="collection__item" href="#">
+          <img class="collection__images" src="img/content/collection-2.jpg" alt="images">
+          <div class="overlay">
+          </div>
+          <div class="collection__info">
+            <h6 class="collection__info-title">Truffaut literally trust</h6>
+            <p class="collection__info-text">Living room furntiture | Chair</p>
+          </div>
+        </a>
+        <a class="collection__item" href="#">
+          <img class="collection__images" src="img/content/collection-3.jpg" alt="images">
+          <div class="collection__info">
+            <h6 class="collection__info-title">Truffaut literally trust</h6>
+            <p class="collection__info-text">Living room furntiture | Chair</p>
+          </div>
+        </a>
+        <a class="collection__item" href="#">
+          <img class="collection__images" src="img/content/collection-4.jpg" alt="images">
+          <div class="collection__info">
+            <h6 class="collection__info-title">Truffaut literally trust</h6>
+            <p class="collection__info-text">Living room furntiture | Chair</p>
+          </div>
+        </a>
+        <a class="collection__item" href="#">
+          <img class="collection__images" src="img/content/collection-5.jpg" alt="images">
+          <div class="collection__info">
+            <h6 class="collection__info-title">Truffaut literally trust</h6>
+            <p class="collection__info-text">Living room furntiture | Chair</p>
+          </div>
+        </a>
+      </div>
+    </div>
     </main>
 
     <footer class="footer">
