--- a/src/contacts.html
+++ b/src/contacts.html
@@ -81,40 +81,178 @@
       </div>
       <section class="contact">
         <div class="container">
-          <h3 class="contact">Contact Us</h3>
-          <ul class="contact__social-item">
-            <a class="contact__social-link" href="">
-              <img class="contact__social-link" src="img/facebook.svg" alt="Facebook">
-            </a>
+          <h3 class="contact__title">Contact Us</h3>
+          <ul class="contact__social">
+            <li class="contact__social-item">
+              <a class="contact__social-link" href="">
+                <img class="contact__social-link" src="img/facebook.svg" alt="Facebook">
+              </a>
+            </li>
+            <li class="contact__social-item">
+              <a class="contact__social-link" href="">
+                <img class="contact__social-link" src="img/instagram.svg" alt="Facebook">
+              </a>
+            </li>
+            <li class="contact__social-item">
+              <a class="contact__social-link" href="">
+                <img class="contact__social-link" src="img/pinterest.svg" alt="Facebook">
+              </a>
+            </li>
+            <li class="contact__social-item">
+              <a class="contact__social-link" href="">
+                <img class="contact__social-link" src="img/whatsapp.svg" alt="Facebook">
+              </a>
+            </li>
+            <li class="contact__social-item">
+              <a class="contact__social-link" href="">
+                <img class="contact__social-link" src="img/youtube.svg" alt="Facebook">
+              </a>
+            </li>
           </ul>
-          <ul class="contact__social-item">
-            <a class="contact__social-link" href="">
-              <img class="contact__social-link" src="img/instagram.svg" alt="Facebook">
+          
+          <div class="contact__box">
+            <p class="contact__text">
+              Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock
+            </p>
+            <a class="contact__phone" href="tel:+14158297934">(415) 829-7934</a>
+            <div class="contact__st">725 Green St</div>
+            <div class="contact__city">San Francisco, California(CA), 94133</div>
+            <a class="info-email" href="mailto:ouremailaddress@email.com">
+              ouremailaddress@email.com
             </a>
-          </ul>
-          <ul class="contact__social-item">
-            <a class="contact__social-link" href="">
-              <img class="contact__social-link" src="img/pinterest.svg" alt="Facebook">
-            </a>
-          </ul>
-          <ul class="contact__social-item">
-            <a class="contact__social-link" href="">
-              <img class="contact__social-link" src="img/whatsapp.svg" alt="Facebook">
-            </a>
-          </ul>
-          <ul class="contact__social-item">
-            <a class="contact__social-link" href="">
-              <img class="contact__social-link" src="img/youtube.svg" alt="Facebook">
-            </a>
-          </ul>
-          <a class="contact__phone" href="tel:+14158297934">(415) 829-7934</a>
-          <div class="contact__st">725 Green St</div>
-          <div class="contact__city">San Francisco, California(CA), 94133</div>
-          <a class="info-email" href="mailto:ouremailaddress@email.com">
-            ouremailaddress@email.com
-          </a>
+          </div>
+          <form class="contact__form">
+            <input class="contact__form-input" placeholder="Your name" type="text">
+            <input class="contact__form-input" placeholder="Your e-mail" type="email">
+            <textarea class="contact__form-area" placeholder="Your message"></textarea>
+            <button class="contact__form-btn" type="submit">Send</button>
+          </form>
         </div>
       </section>
+      <div class="container-fluid">
+      <div class="contact-slider">
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/1.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/2.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/3.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/4.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/5.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/6.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/7.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/8.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/9.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/10.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/1.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/2.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/3.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/4.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/5.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/6.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/7.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/8.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/9.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/10.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/1.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/2.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/3.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/4.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/5.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/6.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/7.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/8.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/9.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+        <a class="contact-slider__link" href="#">
+          <img class="contact-slider__img" src="img/slider/10.jpg" alt="images">
+          <p class="contact-slider__title">Truffaut literally trust</p>
+        </a>
+      </div>
+    </div>
     </main>
 
     <footer class="footer">
